--- a/client/src/app/components/new-group/new-group.component.scss
+++ b/client/src/app/components/new-group/new-group.component.scss
@@ -58,6 +58,8 @@
 }
 
 .form-control {
+  border: 3px solid #000;
+  box-shadow: 4px 4px 0 #000;
   width: 100%;
   padding: 0.75rem 0.9rem;
   font-size: 1rem;
@@ -119,6 +121,8 @@ button[disabled] {
 }
 
 .icon-preview img {
+  border: 3px solid #000;
+  box-shadow: 4px 4px 0 #000;
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
