Update new group component header with improved title and subtitle styling

--- a/client/src/app/components/new-group/new-group.component.html
+++ b/client/src/app/components/new-group/new-group.component.html
@@ -1,7 +1,11 @@
 <div class="panel-wrapper">
   <div class="panel">
     <div class="panel-header">
-      <h1>New group</h1>
+      <div class="panel-title">
+        <h1>Let's make a group</h1>
+        <p class="subtitle">Every great idea starts somewhere</p>
+      </div>
+
       <i class="return bi bi-arrow-right" (click)="onCancel()"></i>
     </div>
 
