--- a/client/src/app/components/main-container/main-container.component.html
+++ b/client/src/app/components/main-container/main-container.component.html
@@ -1,5 +1,5 @@
 <div class="page" [class.is-adding]="isAdding">
-  <div class="backdrop" (click)="slideBack()"></div>
+  <button type="button" class="backdrop" (click)="slideBack()" aria-label="Close panel"></button>
 
   <main class="main">
     <button class="btn" (click)="slideToAddForm()">
@@ -11,6 +11,6 @@
   </main>
 
   <aside class="panel" aria-label="Add new group item">
-    <app-new-group (cancel)="slideBack()" (create)="onCreate($event)"></app-new-group>
+    <app-new-group (dismiss)="slideBack()" (create)="onCreate($event)"></app-new-group>
   </aside>
 </div>
