--- a/client/src/app/components/new-group/new-group.component.html
+++ b/client/src/app/components/new-group/new-group.component.html
@@ -6,7 +6,12 @@
         <p class="subtitle">Every great idea starts somewhere</p>
       </div>
 
-      <i class="return bi bi-arrow-right" (click)="onCancel()"></i>
+      <button
+        type="button"
+        class="return bi bi-arrow-right"
+        (click)="onCancel()"
+        aria-label="Close panel"
+      ></button>
     </div>
 
     <form (ngSubmit)="createGroup()" #groupForm="ngForm" class="form">
