dismiss arrow is aligned with the titile

--- a/client/src/app/components/new-group/new-group.component.scss
+++ b/client/src/app/components/new-group/new-group.component.scss
@@ -14,7 +14,7 @@
 
 .panel-header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   margin-bottom: 1rem;
 }
