components are adapted

--- a/client/src/app/components/new-group/new-group.component.html
+++ b/client/src/app/components/new-group/new-group.component.html
@@ -77,9 +77,9 @@
       </div>
 
       <div class="form-footer">
-        @if (icon) {
+        @if (iconUrl) {
           <div class="icon-preview">
-            <img [src]="icon" alt="Icon preview" />
+            <img [src]="iconUrl" alt="Icon preview" />
           </div>
         } @else {
           <div></div>
