--- a/client/src/app/components/list-group/list-group.component.html
+++ b/client/src/app/components/list-group/list-group.component.html
@@ -1,10 +1,10 @@
 <div class="grid-container">
-  @for (item of listGroup(); track $index) {
+  @for (item of listGroup(); track item.id) {
     <div class="card-container">
       <div class="upper-container" [style.background-color]="item.color">
-        @if (item.icon) {
+        @if (item.iconUrl) {
           <div class="image-container">
-            <img [src]="item.icon" alt="list group image" />
+            <img [src]="item.iconUrl" alt="list group image" />
           </div>
         }
       </div>
