--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -32,6 +32,7 @@ textarea {
     color: $color-primary;
     border: 3px solid $color-primary;
     box-shadow: none;
+    cursor: pointer;
   }
 }
 
