--- a/client/src/app/components/list-group-entries/list-group-entries.component.html
+++ b/client/src/app/components/list-group-entries/list-group-entries.component.html
@@ -1,3 +1,22 @@
 <div class="vt-entries">
-  <p>list-group-entries works!</p>
+  <div class="page-body">
+    @for (item of entries; track $index) {
+      <div class="entry">
+        <div class="voting">
+          <button type="button" class="bi bi bi-chevron-up" aria-label="Increase vote"></button>
+          <p class="total-votes">{{ item.totalVotes }}</p>
+          <button type="button" class="bi bi bi-chevron-down" aria-label="Decrease vote"></button>
+        </div>
+        <p>{{ item.text }}</p>
+      </div>
+    }
+  </div>
+  <div class="page-footer">
+    <form (ngSubmit)="addEntry()" #groupForm="ngForm" class="form">
+      <input type="text" class="form-control" name="entryText" [(ngModel)]="newTextEntry" />
+      <div class="form-actions">
+        <button type="submit" class="btn btn-primary">Add Entry</button>
+      </div>
+    </form>
+  </div>
 </div>
