--- a/client/src/app/components/nav-bar/nav-bar.component.scss
+++ b/client/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,13 +1,19 @@
 @use 'variables' as *;
 
 .nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
 
   padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   background: #fff;
 
   border-bottom: 1px solid $color-accent;
