Display group in entries (#32)
* global text front resembling the logo

* enhance group entry display with header and styling

* fix: add entry footer is fixed instead of sticky

* style: update nav-bar positioning

* add return button to group entries header with styling

* refactor: replace onCancel method with routerLink for navigation in new group component

* style: update entry component styling for improved layout and appearance

* style: enhance layout and appearance of group entries header with image support

* test: add stubs for ActivatedRoute and GroupEntriesService in NewGroupComponent tests

--- a/client/src/app/components/list-group-entries/list-group-entries.component.html
+++ b/client/src/app/components/list-group-entries/list-group-entries.component.html
@@ -1,4 +1,31 @@
 <div class="vt-entries">
+  <div class="page-header">
+    <div class="image-section">
+      <button
+        type="button"
+        class="return bi bi-arrow-left"
+        aria-label="Close panel"
+        [routerLink]="'/groups'"
+      ></button>
+
+      @if (group()?.iconUrl) {
+        <div class="image-container">
+          <img [src]="group()?.iconUrl" alt="list group image" />
+        </div>
+      }
+    </div>
+
+    <div class="text-section">
+      <h2 class="title prwt-logo-text">{{ group()?.title }}</h2>
+
+      @if (group()?.description) {
+        <div class="description" [style.backgroundColor]="group()?.color">
+          <p>{{ group()?.description }}</p>
+        </div>
+      }
+    </div>
+  </div>
+
   <div class="page-body">
     @for (item of groupEntries().slice().reverse(); track item.created) {
       <div class="entry">
@@ -11,6 +38,7 @@
       </div>
     }
   </div>
+
   <div class="page-footer">
     <form (ngSubmit)="addEntry()" #groupForm="ngForm" class="form">
       <input type="text" class="form-control" name="entryText" [(ngModel)]="newTextEntry" />
