Refactor authentication flow and remove development auto-login configuration

--- a/client/src/app/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/components/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
 
   <div class="links">
     <a routerLink="/account" routerLinkActive="is-active">Account</a>
-    <a routerLink="/login" routerLinkActive="is-active"
+    <a (click)="auth.loginWithOAuth2()"
       >Login with <img src="assets/images/discord-icon.svg" alt="Discord logo" />
     </a>
   </div>
